# netizen-quiz-app

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  Dockerfile.admin  admin_app.py  main.py  pyproject.toml  requirements.txt
backend/admin/: admin_views.py
backend/alembic/: env.py
backend/alembic/models/: __init__.py
backend/alembic/versions/: 159ee14d9a65_sdfsfdfdn.py  2f7c5d80d846_initalal.py  52ba67fa0e1c_.py  62080a0be155_sdfsfdfdn.py  62e085ab7d1b_.py  82b88f72105a_sdfsfdfd.py  a8d375ab2830_.py  d678c6bd01a3_sdfsfdfdn.py  fae97372adb9_sdfsfdfdn.py
backend/bot/: dispatcher.py  polling.py
backend/bot/handlers/: start.py
backend/bot/services/: users.py
backend/cache/: redis.py
backend/core/: config.py
backend/crudadmin_data/: admin.db
backend/db/: base.py  quizes.py  users.py
backend/db/connection/: postgres.py  pydantic.py
backend/routers/: router.py
backend/webhooks/: telegram.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/quizes/: route.ts
frontend/app/api/quizes/[id]/: route.ts
frontend/app/api/register/: route.ts
frontend/app/quizes/: page.tsx
frontend/app/quizes/[id]/: page.tsx
frontend/components/: Coin.tsx  CustomAudioPlayer.tsx  CustomVideoPlayer.tsx  QuizeItem.tsx  Slider.tsx  Tabs.tsx
frontend/src/: App.tsx
frontend/types/: index.ts
