[tool.poetry]
name = "quize-backend"
version = "0.1.0"
description = ""
authors = ["usmskolyadin <koladinmaksim246@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
aiogram = "^3.20.0.post0"
pydantic = "^2.11.4"
python-telegram-bot = "^22.0"
python-dotenv = "^1.1.0"
alembic = "^1.16.1"
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
